--- a/main.css
+++ b/main.css
@@ -1,4 +1,47 @@
+/*-----------------------------------------------------------------------------
+-----------------GLOBAL--------------------------------------------------------
+-----------------------------------------------------------------------------*/
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: 'Work Sans', sans-serif;
+
+}
+h1 {
+    margin: 0;
+}
+a{
+    color: #fff;
+    text-decoration: none;
+}
+/*------------------------------------------------------------------------------
+------------------HEADER--------------------------------------------------------
+------------------------------------------------------------------------------*/
 header{
     background-color: #000000;
     color: #fff;
+    height: 85px;
+}
+.logo{
+    float: left;
+    width: 250px;
+    padding: 25px 0 0 30px;
+}
+h1:hover {
+    color: lightblue;
+}
+/*------------------------------------------------------------------------------------
+------------------MAIN-NAVIGATION-----------------------------------------------------
+------------------------------------------------------------------------------------*/
+.main-nav{
+    color: #fff;
+    width: 400px;
+    float: right;
+    padding: 40px 0 0 0;
+}
+.main-nav a {
+    padding: 14px 16px;
+}
+.main-nav a:hover{
+    color: lightblue;
 }
