--- a/main.css
+++ b/main.css
@@ -10,6 +10,9 @@ body, html {
 h1 {
     margin: 0;
 }
+p{
+    margin: 0;
+}
 a{
     color: #fff;
     text-decoration: none;
@@ -44,4 +47,27 @@ h1:hover {
 }
 .main-nav a:hover{
     color: lightblue;
+}
+
+/*------------------------------------------------------------------------------------
+-----------------FOOTER---------------------------------------------------------------
+------------------------------------------------------------------------------------*/
+footer{
+    background-color:#000000;
+    color: #fff;
+    height: 200px;
+    width: 100%;
+}
+
+.slider{
+    margin: 0 auto;
+    background-color: gray;
+    width: 80%;
+    height: 500px;
+}
+
+.slider img {
+    
+    width: 100%;
+    height: 500px;
 }
