--- a/main.css
+++ b/main.css
@@ -64,6 +64,9 @@ header{
 .main-nav a:hover{
     color: lightblue;  
 }
+.active {
+    color:lightblue;
+}
 
 /*------------------------------------------------------------------------------------
 -----------------FOOTER---------------------------------------------------------------
@@ -90,16 +93,26 @@ footer{
 /*-----------------------------------------------------------------------------------
 ------------------ABOUT ME-----------------------------------------------------------
 -----------------------------------------------------------------------------------*/
-/*.profile-image img{
-    width: 40px;
-    height: 40px;
-    border-radius: 100px;
-    border: solid 1px #fff;
-    float: left;
-    /*margin: 25px 0 0 30px;
-}*/
+
 
 main{
+    padding: 80px 0 40px 0;
     margin: 0 auto;
     width: 80%;
+}
+.profile-image img{
+    margin: 0px 15px 5px 0px;
+   float: left;
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    border: solid 8px lightblue;
+}
+h2 {
+    width: 100%;
+    float: left;
+    color: #023b78;
+}
+.t {
+    width: 100%;
 }
