--- a/main.css
+++ b/main.css
@@ -49,33 +49,48 @@ header{
         color: lightblue;
         border-color: lightblue;
     }
-/*------------------------------------------------------------------------------------
-------------------MAIN-NAVIGATION-----------------------------------------------------
-------------------------------------------------------------------------------------*/
-.main-nav{
-    color: #fff;
-    width: 400px;
-    float: right;
-    padding: 40px 0 0 0;
-}
-.main-nav a {
-    padding: 14px 16px;
-}
-.main-nav a:hover{
-    color: lightblue;  
-}
-.active {
-    color:lightblue;
-}
+    /*---------------------------------
+    ------------MAIN-NAVIGATION--------
+    ----------------------------------*/
+    .main-nav{
+        color: #fff;
+        width: 400px;
+        float: right;
+        padding: 40px 0 0 0;
+    }
+    .main-nav a {
+        padding: 14px 16px;
+    }
+    .main-nav a:hover{
+        color: lightblue;  
+    }
+    .active {
+        color:lightblue;
+    }
 
 /*------------------------------------------------------------------------------------
 -----------------FOOTER---------------------------------------------------------------
 ------------------------------------------------------------------------------------*/
 footer{
+    padding: 40px 15px 15px 15px;
     background-color:#000000;
     color: #fff;
-    height: 200px;
     width: 100%;
+}
+.footer-copyright{
+    padding: 45px 0 0 0;
+    text-align: center;
+    width: 90%;
+    margin: 40px auto 0 auto;
+    font-size: 10px;
+    border-top: 1px solid #fff;
+}
+.footer-social{
+    
+    text-align: center;
+}
+.footer-social .fab{
+    margin: 0 10px 0 0;
 }
 
 .slider{
@@ -90,11 +105,10 @@ footer{
     height: 500px;
 }
 
+
 /*-----------------------------------------------------------------------------------
 ------------------ABOUT ME-----------------------------------------------------------
 -----------------------------------------------------------------------------------*/
-
-
 main{
     padding: 80px 0 40px 0;
     margin: 0 auto;
@@ -115,4 +129,7 @@ h2 {
 }
 .t {
     width: 100%;
+}
+.fa-facebook-square{
+    color: #fff;
 }
