--- a/main.css
+++ b/main.css
@@ -1,11 +1,13 @@
 /*-----------------------------------------------------------------------------
 -----------------GLOBAL--------------------------------------------------------
 -----------------------------------------------------------------------------*/
-body, html {
-    margin: 0;
-    padding: 0;
+body{
+    margin: 0 0 240px;
+}
+html {
     font-family: 'Work Sans', sans-serif;
-
+    position: relative;
+    min-height: 100%;
 }
 h1 {
     margin: 0;
@@ -73,55 +75,31 @@ header{
     .active {
         color:lightblue;
     }
-
 /*------------------------------------------------------------------------------------
------------------FOOTER---------------------------------------------------------------
+-----------------START PAGE-----------------------------------------------------------
 ------------------------------------------------------------------------------------*/
-footer{
-    padding: 40px 0 15px 0;
-    background-color:#000000;
-    color: #fff;
-    width: 100%;
-}
-.footer-copyright{
-    padding: 45px 0 0 0;
-    text-align: center;
-    width: 90%;
-    margin: 40px auto 0 auto;
-    font-size: 10px;
-    border-top: 1px solid #fff;
-}
-.footer-social{
-    
-    text-align: center;
-}
-.footer-social .fab{
-    margin: 0 10px 0 0;
-}
-
-.slider{
-    margin: 0 auto;
-    background-color: gray;
-    height: 500px;
-}
-
-.slider img {   
-    width: 100%;
-    height: 500px;
-}
+video .fullscreen-video-wrap{
 
 
+ 
+}
+
+/*
+.fullscreen-video-wrap video{
+    min-width: 100%; 
+    min-height: 100%;
+}
 /*-----------------------------------------------------------------------------------
 ------------------ABOUT ME-----------------------------------------------------------
 -----------------------------------------------------------------------------------*/
 main{
-    padding: 80px 0 40px 0;
+    padding: 100px 0 40px 0;
     margin: 0 auto;
     width: 80%;
 }
 .profile-image img{
     margin: 0px 15px 5px 0px;
-   float: left;
+    float: left;
     width: 200px;
     height: 200px;
     border-radius: 100px;
@@ -136,8 +114,40 @@ h2 {
 .fa-facebook-square{
     color: #fff;
 }
-.start-mov{
-    max-width: 100%;
-    max-height: 100%;
-
+/*-----------------------------------------------------------------------------------
+-----------------PORTFOLIO-----------------------------------------------------------
+-----------------------------------------------------------------------------------*/
+.port-work{
+    float: left;
+    background-color: gray;
+    height: 200px;
+    width: 240px;
+    margin: 10px;
+}
+/*------------------------------------------------------------------------------------
+-----------------FOOTER---------------------------------------------------------------
+------------------------------------------------------------------------------------*/
+footer{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 200px;
+    padding: 40px 0 0 0;
+    background-color:#000000;
+    color: #fff;
+    width: 100%;
+}
+.footer-copyright{
+    padding: 45px 0 0 0;
+    text-align: center;
+    width: 90%;
+    margin: 40px auto 0 auto;
+    font-size: 10px;
+    border-top: 1px solid #fff;
+}
+.footer-social{
+    text-align: center;
+}
+.footer-social .fab{
+    margin: 0 10px 0 0;
 }
