--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 -----------------GLOBAL--------------------------------------------------------
 -----------------------------------------------------------------------------*/
 body{
-    margin: 0 0 240px;
+    margin: 0 0 245px;
 }
 html {
     font-family: 'Work Sans', sans-serif;
@@ -23,14 +23,14 @@ a{
 ------------------HEADER--------------------------------------------------------
 ------------------------------------------------------------------------------*/
 header{
+    position: absolute;
+    top: 0;
+    left: 0;
     background-color: #000000;
     color: #fff;
     height: 85px;
     opacity: 0.8;
-    position: absolute;
     width: 100%;
-    top: 0;
-    left: 0;
     z-index: 1;
 }
     /*----------------------------
@@ -65,6 +65,7 @@ header{
         width: 400px;
         float: right;
         padding: 40px 0 0 0;
+        z-index: 1;
     }
     .main-nav a {
         padding: 14px 16px;
@@ -78,17 +79,24 @@ header{
 /*------------------------------------------------------------------------------------
 -----------------START PAGE-----------------------------------------------------------
 ------------------------------------------------------------------------------------*/
-video .fullscreen-video-wrap{
-
-
- 
+.fullscreen-video-wrap{
+    height: 100vh;
+    display: flex;
+    align-items: center;
 }
-
-/*
-.fullscreen-video-wrap video{
-    min-width: 100%; 
+.video-wrap{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.video-wrap video{
+    min-width: 100%;
     min-height: 100%;
 }
+
 /*-----------------------------------------------------------------------------------
 ------------------ABOUT ME-----------------------------------------------------------
 -----------------------------------------------------------------------------------*/
@@ -117,12 +125,16 @@ h2 {
 /*-----------------------------------------------------------------------------------
 -----------------PORTFOLIO-----------------------------------------------------------
 -----------------------------------------------------------------------------------*/
+.port-work-wrapper{
+    height: 80vh;
+}
 .port-work{
     float: left;
     background-color: gray;
     height: 200px;
     width: 240px;
     margin: 10px;
+    display: block;
 }
 /*------------------------------------------------------------------------------------
 -----------------FOOTER---------------------------------------------------------------
@@ -131,23 +143,37 @@ footer{
     position: absolute;
     left: 0;
     bottom: 0;
-    height: 200px;
-    padding: 40px 0 0 0;
+    height: 245px;
+    padding: 0 0 0 0;
     background-color:#000000;
     color: #fff;
     width: 100%;
 }
-.footer-copyright{
-    padding: 45px 0 0 0;
+.footer-links{
+    font-size: 14px; 
+    padding: 10px 0 20px 0;
     text-align: center;
-    width: 90%;
-    margin: 40px auto 0 auto;
+}
+.footer-tag{
+    font-size: 22px;
+    padding: 20px;
+    text-align: center;
+}
+
+.footer-links a{
+    margin: 0 25px 0 0;
+
+}
+.footer-copyright{
+    
+    text-align: center;
     font-size: 10px;
-    border-top: 1px solid #fff;
+    padding: 15px;
 }
 .footer-social{
     text-align: center;
 }
+
 .footer-social .fab{
     margin: 0 10px 0 0;
 }
