added hero image

--- a/main.css
+++ b/main.css
@@ -100,11 +100,7 @@ header{
 /*-----------------------------------------------------------------------------------
 ------------------ABOUT ME-----------------------------------------------------------
 -----------------------------------------------------------------------------------*/
-main{
-    padding: 100px 0 40px 0;
-    margin: 0 auto;
-    width: 80%;
-}
+
 .profile-image img{
     margin: 0px 15px 5px 0px;
     float: left;
@@ -176,4 +172,12 @@ footer{
 
 .footer-social .fab{
     margin: 0 10px 0 0;
+}
+
+.hero{
+    width: 100%;
+}
+.hero img{
+    width: 100%;
+    height: 590px;
 }
