--- a/main.css
+++ b/main.css
@@ -19,6 +19,13 @@ a{
     color: #fff;
     text-decoration: none;
 }
+.hero{
+    width: 100%;
+}
+.hero img{
+    width: 100%;
+    max-height: 590px;
+}
 /*------------------------------------------------------------------------------
 ------------------HEADER--------------------------------------------------------
 ------------------------------------------------------------------------------*/
@@ -174,10 +181,20 @@ footer{
     margin: 0 10px 0 0;
 }
 
-.hero{
-    width: 100%;
+#contact input {
+    box-shadow: none;
+    border: none;
+    font-size: 16px;
+    padding: 8px 8px 8px 10px; 
 }
-.hero img{
-    width: 100%;
-    height: 590px;
+#contact input:focus{
+    outline: none;
+}
+
+.contact-test{
+    width: 200px;
+    border-bottom: 2px solid black;
+}
+input:focus,.contact-test:focus{
+    border-bottom: 2px solid blue;
 }
