added hover effect on footer elements

--- a/main.css
+++ b/main.css
@@ -186,6 +186,10 @@ footer{
 .footer-social .fab{
     margin: 0 10px 0 0;
 }
+.footer-links .fab:hover,
+.footer-links a:hover{
+    color: lightblue;
+}
 /*------------------------------------------------------------------------------------
 -----------------CONTACT PAGE---------------------------------------------------------
 ------------------------------------------------------------------------------------*/
